tests/contract_testcases/substrate/functions/stray_semicolon.sol
struct a { uint32 f1; };
// ---- Expect: diagnostics ----
// error: 1:24-25: stray semicolon
